other-mpol/add-ttl-jobs/.chainsaw-test/job-patched.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: job01
spec:
  ttlSecondsAfterFinished: 900
  template:
    spec:
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:1.35
        command: ["sleep", "3600"]
      restartPolicy: Never
  backoffLimit: 4
