other-mpol/add-ttl-jobs/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: add-ttl-jobs
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../add-ttl-jobs.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: job.yaml
  - name: step-03
    try:
    - assert:
        file: job-patched.yaml
    - error:
        file: job-not-patched.yaml
  - name: step-04-exception
    try:
    - apply:
        file: policy-exceptions-namespace.yaml
    - apply:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: PolicyException
          metadata:
            name: add-ttl-jobs-exception
            namespace: policy-exceptions
          spec:
            policyRefs:
            - name: add-ttl-jobs
              kind: MutatingPolicy
            allowedValues: [ttlSecondsAfterFinished]
            matchConditions:
            - name: exact-job
              expression: object.metadata.namespace == 'default' && object.metadata.name == 'exception-job'
    - sleep: {duration: 15s}
    - apply:
        resource:
          apiVersion: batch/v1
          kind: Job
          metadata:
            name: exception-job
            namespace: default
          spec:
            template:
              spec:
                containers: [{name: app, image: nginx:latest}]
                restartPolicy: Never
    - assert:
        resource:
          apiVersion: batch/v1
          kind: Job
          metadata:
            name: exception-job
            namespace: default
          spec:
            template:
              spec:
                containers: [{name: app, image: nginx:latest}]
                restartPolicy: Never
